After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719741 - GLX winsys: fix feature handling for INTEL_swap_event
GLX winsys: fix feature handling for INTEL_swap_event
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-03 03:14 UTC by Owen Taylor
Modified: 2014-02-05 13:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GLX winsys: fix feature handling for INTEL_swap_event (1.83 KB, patch)
2013-12-03 03:14 UTC, Owen Taylor
accepted-commit_now Details | Review

Description Owen Taylor 2013-12-03 03:14:44 UTC
This crept in with the frame timings work last year. It actually
turns out that in some cases Clutter performs significantly better
*without* waiting for frame completion - see bug 719368 for discussion,
but I think having it disabled by accident in Cogl is not appropriate
in any case.
Comment 1 Owen Taylor 2013-12-03 03:14:47 UTC
Created attachment 263361 [details] [review]
GLX winsys: fix feature handling for INTEL_swap_event

The declaration of INTEL_swap_event was treating winsys features as
if they were a bitfield, but they aren't. The end result was that
instead of reporting two features when INTEL_swap_event is present,
we report none.
Comment 2 Robert Bragg 2013-12-03 17:12:59 UTC
Comment on attachment 263361 [details] [review]
GLX winsys: fix feature handling for INTEL_swap_event

This patch looks good to land to me:

Reviewed-by: Robert Bragg <robert@linux.intel.com>

thanks
Comment 3 Robert Bragg 2014-02-05 13:47:22 UTC
I've pushed this to the cogl-1.18 branch