cogl/winsys/cogl-winsys-glx-feature-functions.h
@@ -177,7 +177,6 @@ COGL_WINSYS_FEATURE_BEGIN (255, 255,
                            "INTEL\0",
                            "swap_event\0",
                            0,
-                           COGL_WINSYS_FEATURE_SWAP_BUFFERS_EVENT |
                            COGL_WINSYS_FEATURE_SYNC_AND_COMPLETE_EVENT)
 COGL_WINSYS_FEATURE_END ()
 
